# Digital-Document-Locker

./: .gitignore  CMakeLists.txt  dockerfile  main.cpp  main_console.cpp  server.cpp
docs/: auth.js  index.html  login.html  style.css
frontend/: auth.css  auth.js  landing.css  landing.html  register.html  script.js
include/: AuthStorage.h  DBStorage.h  Document.h  DocumentDeserializer.h  DocumentEditor.h  DocumentElement.h  DocumentSerializer.h  ElementFactory.h  FileStorage.h  Persistence.h  User.h
